# FSM-labs

./: .gitignore  .gitmodules  README.md
Determination/: CMakeLists.txt  Determination.sln  README.md
Determination/Determination/: Determination.cpp  Determination.vcxproj  Determination.vcxproj.filters  pch.h
Determination/Determination/CSVReader/: CSVReader.cpp
Determination/Determination/CSVWriter/: CSVWriter.cpp  CSVWriter.h
Determination/Determination/Console/Determination/: ConsoleDetermination.cpp  ConsoleDetermination.h
Determination/Determination/RegularGrammar/Console/Determination/: ConsoleGrammarDetermination.cpp  ConsoleGrammarDetermination.h
Determination/Determination/RegularGrammar/ProductionRules/: ProductionRules.cpp  ProductionRules.h
Determination/Determination/RegularGrammar/ProductionRules/ProductionRule/: ProductionRule.h
Determination/Determination/RegularGrammar/ProductionRules/ProductionRule/RightPart/: RightPart.cpp  RightPart.h
Determination/Determination/RegularGrammar/Reader/: Reader.cpp  Reader.h  RegularGrammarReader.cpp  RegularGrammarReader.h
Determination/Determination/RegularGrammar/common/: GrammarTypes.h
Determination/Determination/Tables/: FSMTable.hpp  MealyTable.cpp  MealyTable.h  MooreTable.cpp  MooreTable.h
Determination/Determination/common/: StringCommon.cpp  StringCommon.h
Lexer/: Lexer.sln  README.md
Lexer/Console_Lexer/: Console_Lexer.cpp  Console_Lexer.vcxproj  Console_Lexer.vcxproj.filters
Lexer/Lexer/: Lexer.vcxproj  Lexer.vcxproj.filters  pch.h
Lexer/Lexer/Lexer/: Lexer.cpp  Lexer.h
Lexer/Lexer/Token/: Token.cpp  Token.h  TokenTypename.h
Lexer/Lexer/common/: common.h
Lexer/Tests_Lexer/: Tests_Lexer.cpp  Tests_Lexer.vcxproj  Tests_Lexer.vcxproj.filters  packages.config
Lexer/Tests_Lexer/examples/output/: source1.lexer  source10.lexer  source2.lexer  source3.lexer  source4.lexer  source5.lexer  source6.lexer  source7.lexer  source8.lexer  source9.lexer
Lexer/Tests_Lexer/examples/src/: source1.pl1  source10.pl1  source2.pl1  source3.pl1  source4.pl1  source5.pl1  source6.pl1  source7.pl1  source8.pl1  source9.pl1
MealyMoore/: CMakeLists.txt  MealyMoore.sln
MealyMoore/Console_MealyMooreConversionBothWays/: CMakeLists.txt  Console_MealyMooreConversionBothWays.cpp  Console_MealyMooreConversionBothWays.vcxproj  Console_MealyMooreConversionBothWays.vcxproj.filters  example.csv  output.csv
MealyMoore/MealyMooreConversionBothWays/: CMakeLists.txt  MealyMooreConversionBothWays.vcxproj  MealyMooreConversionBothWays.vcxproj.filters  pch.h
MealyMoore/MealyMooreConversionBothWays/Converter/: FSMConverter.cpp  FSMConverter.h
MealyMoore/MealyMooreConversionBothWays/Converter/Strategies/: ConvertMealyToMoore.cpp  ConvertMealyToMoore.h  ConvertMooreToMealy.cpp  ConvertMooreToMealy.h  IConvertStrategy.h
MealyMoore/MealyMooreConversionBothWays/Reader/: CSVReader.cpp  CSVReader.h  ICSVReader.h  MealyReader.cpp  MealyReader.h  MooreReader.cpp  MooreReader.h
MealyMoore/MealyMooreConversionBothWays/Writer/: CSVWriter.cpp  CSVWriter.h
Minimization/: CMakeLists.txt  Minimization.sln
Minimization/Minimization/: CMakeLists.txt  INPUT.TXT  MOORE_EXMPL.TXT  Minimization.cpp  Minimization.vcxproj  Minimization.vcxproj.filters
Minimization/Minimization/CSVReader/: CSVReader.cpp  CSVReader.h  MealyReader.cpp  MealyReader.h  MooreReader.cpp  MooreReader.h
Minimization/Minimization/CSVWriter/: CSVWriter.cpp  CSVWriter.h
Minimization/Minimization/Tables/: FSMTable.hpp  MealyTable.cpp  MealyTable.h  MooreTable.cpp  MooreTable.h
Minimization/Minimization/_TESTS/: MEALY_EXMPL.CSV
fast-cpp-csv-parser/: csv.h
